<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Yet Another Micro Blogging App</string>
    <string name="status_title">Status Update</string>
    <string name="postButtonText">Post Tweet</string>
    <string name="statusHint">Type in the status update up to 140 characters</string>
    <string name="loginui_title">Login to service</string>
    <string name="username_prompt">Username</string>
    <string name="password_prompt">Password</string>
    <string name="loginRequestButtonTitle">&quot;Login&quot;</string>
    <string-array name="servicesSpinnerItems">
        <item>"Twitter"</item>
        <item>"Facebook"</item>
        <item>"my_Space"</item>
    </string-array>
        <string name="ShowpublicTimelineButtonText">Public Timeline</string>
        <string name="post_success">Successful post</string>
        <string name="post_fail">Failed to post</string>
        <string name="pref_user_title">User Name</string>
        <string name="logoutRequestButtonTitle">Logout</string>
        <string name="prefr_password_title">Password</string>
        <string name="pref_site_url">Site URL</string>
        <string name="pref_site_url_summery">Enter the API url here</string>
        <string name="menu_preferences_title">Settings</string>
        <string name="menu_preferences_title_cond">Settings</string>
        <string name="menu_start_service_title">Start Timeline Service</string>
        <string name="menu_start_service_title_cond">Start updates</string>
        <string name="menu_stop_service_title">Stop Timeline Service</string>
        <string name="menu_stop_service_title_cond">Stop updates</string>
        <string name="menu_refresh_title">Refresh Timeline</string>
        <string name="menu_refresh_title_cond">Refresh</string>
        <string name="menu_post_title">Compose new status</string>
        <string name="menu_post_title_cond">Compose</string>
        <string name="menu_timeline_title">Show user timeline</string>
        <string name="menu_timeline_title_cond">View timeline</string>

</resources>