<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        style="@style/title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/loginui_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="20sp"
        android:entries="@array/servicesSpinnerItems" />

    <TextView
        android:id="@+id/textView2"
        style="@style/lableStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_prompt" />

    <EditText
        android:id="@+id/editText1"
        style="@style/promptBox_stye"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        style="@style/lableStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_prompt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" style="@style/promptBox_stye"/>

    <Button
        android:id="@+id/LoginClickButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10sp"
        android:layout_marginTop="20sp"
        android:text="@string/loginRequestButtonTitle" />

    <Button
        android:id="@+id/publicTimelineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:text="@string/ShowpublicTimelineButtonText" />

</LinearLayout>